--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/accuracy" />
 
     <TextView
-        android:id="@+id/address"
+        android:id="@+id/addressView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
